#1265 Helium MS. Fase 2 Pasar Helium a nou estàndard. Canviar versió de Java a OpenJDK11 i actualitzar llibreries