@@ -4,8 +4,10 @@
 package es.caib.helium.back.helper;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import javax.servlet.RequestDispatcher;
@@ -17,17 +19,16 @@ import org.springframework.validation.FieldError;
 import org.springframework.validation.ObjectError;
 
 /**
- * Helper per a marcar peticions AJAX.
+ * Utilitat per a marcar peticions AJAX.
  * 
  * @author Limit Tecnologies <limit@limit.es>
  */
 public class AjaxHelper {
 
-	private static final String PREFIX_AJAX = "/ajax";
+	private static final String ESQUEMA_PREFIX = "/helium";
+	private static final String URI_PREFIX_AJAX = ESQUEMA_PREFIX + "/ajax";
 	private static final String REQUEST_ATTRIBUTE_AJAX = "AjaxHelper.Ajax";
-	private static final String SESSION_ATTRIBUTE_REQUESTPATHSMAP = "AjaxHelper.RequestPathsMap";
-
-	public static final String ACCIO_AJAX_OK = PREFIX_AJAX + "/ok";
+	private static final String SESSION_ATTRIBUTE_URIMAP = "AjaxHelper.UriMap";
 
 	public static boolean isAjax(HttpServletRequest request) {
 		return request.getAttribute(REQUEST_ATTRIBUTE_AJAX) != null;
@@ -35,18 +36,18 @@ public class AjaxHelper {
 	public static boolean comprovarAjaxInterceptor(
 			HttpServletRequest request,
 			HttpServletResponse response) throws Exception {
-		if (isRequestPathAjax(request)) {
+		if (isRequestUriAjax(request)) {
 			String uriSensePrefix = getUriSensePrefix(request);
-			Set<String> requestPathsMap = getRequestPathsMap(request);
-			requestPathsMap.add(uriSensePrefix);
+			Set<String> uriMap = getUriMap(request);
+			uriMap.add(uriSensePrefix);
 			RequestDispatcher dispatcher = request.getRequestDispatcher(uriSensePrefix);
 		    dispatcher.forward(request, response);
 		    return false;
 		} else {
-			Set<String> requestPathsMap = getRequestPathsMap(request);
-			String pathComprovacio = request.getServletPath();
-			if (requestPathsMap.contains(pathComprovacio)) {
-				requestPathsMap.remove(pathComprovacio);
+			Set<String> uriMap = getUriMap(request);
+			String uriComprovacio = request.getRequestURI().substring(ESQUEMA_PREFIX.length());
+			if (uriMap.contains(uriComprovacio)) {
+				uriMap.remove(uriComprovacio);
 				marcarAjax(request);
 			}
 			return true;
@@ -68,36 +69,58 @@ public class AjaxHelper {
 
 
 
-	private static boolean isRequestPathAjax(
+	private static boolean isRequestUriAjax(
 			HttpServletRequest request) {
-		String servletPath = request.getServletPath();
-		return
-				servletPath.startsWith(PREFIX_AJAX) &&
-				!servletPath.startsWith(ACCIO_AJAX_OK);
+		return request.getRequestURI().contains(URI_PREFIX_AJAX);
 	}
 	private static String getUriSensePrefix(
 			HttpServletRequest request) {
-		return request.getServletPath().substring(PREFIX_AJAX.length());
+		String uri = request.getRequestURI();
+		return uri.substring(uri.indexOf(URI_PREFIX_AJAX) + URI_PREFIX_AJAX.length());
 	}
-	private static Set<String> getRequestPathsMap(
+	private static Set<String> getUriMap(
 			HttpServletRequest request) {
 		@SuppressWarnings("unchecked")
-		Set<String> requestPathsMap = (Set<String>)request.getSession().getAttribute(
-				SESSION_ATTRIBUTE_REQUESTPATHSMAP);
-		if (requestPathsMap == null) {
-			requestPathsMap = new HashSet<String>();
+		Set<String> uriMap = (Set<String>)request.getSession().getAttribute(SESSION_ATTRIBUTE_URIMAP);
+		if (uriMap == null) {
+			uriMap = new HashSet<String>();
 			request.getSession().setAttribute(
-					SESSION_ATTRIBUTE_REQUESTPATHSMAP,
-					requestPathsMap);
+					SESSION_ATTRIBUTE_URIMAP,
+					uriMap);
 		}
-		return requestPathsMap;
+		return uriMap;
 	}
 	private static void marcarAjax(HttpServletRequest request) {
 		request.setAttribute(
 				REQUEST_ATTRIBUTE_AJAX,
-				Boolean.valueOf(true));
+				new Boolean(true));
 	}
 
+	/** Classe genèrica per respostes ajax.
+	 */
+	public static class AjaxResponse {
+		
+		private boolean error = false;
+		private String missatge = "";
+		private Map<String, Object> dades = new HashMap<String, Object>();
+		
+		public boolean isError() {
+			return error;
+		}
+		public void setError(boolean error) {
+			this.error = error;
+		}
+		public String getMissatge() {
+			return missatge;
+		}
+		public void setMissatge(String missatge) {
+			this.missatge = missatge;
+		}
+		public Map<String, Object> getDades() {
+			return dades;
+		}
+	}
+	
 	public static class AjaxFormResponse {
 		private Object objecte;
 		private AjaxFormEstatEnum estat;
@@ -107,24 +130,30 @@ public class AjaxHelper {
 			super();
 			this.objecte = objecte;
 			if (bindingResult != null) {
+				String errMsg;
 				this.errorsGlobals = new ArrayList<AjaxFormError>();
 				for (ObjectError objectError: bindingResult.getGlobalErrors()) {
+					errMsg = objectError.getDefaultMessage() != null ?
+								objectError.getDefaultMessage()
+								: MessageHelper.getInstance().getMessage(
+										objectError.getCode(),
+										objectError.getArguments());
 					errorsGlobals.add(
 							new AjaxFormError(
 									objectError.getObjectName(),
-									MessageHelper.getInstance().getMessage(	
-											objectError.getCode(),
-											objectError.getArguments())));
+									errMsg));
 				}
 				this.errorsCamps = new ArrayList<AjaxFormError>();
 				for (FieldError fieldError: bindingResult.getFieldErrors()) {
+					errMsg = fieldError.getDefaultMessage() != null ?
+							fieldError.getDefaultMessage()
+							: MessageHelper.getInstance().getMessage(
+									fieldError.getCode(),
+									fieldError.getArguments());
 					errorsCamps.add(
 							new AjaxFormError(
 									fieldError.getField(),
-									MessageHelper.getInstance().getMessage(
-											fieldError.getCodes(),
-											fieldError.getArguments(),
-											null)));
+									errMsg));
 				}
 				this.estat = AjaxFormEstatEnum.ERROR;
 			} else {
@@ -161,7 +190,6 @@ public class AjaxHelper {
 			return errorsCamps != null;
 		}
 	}
-
 	public static class AjaxFormError {
 		private String camp;
 		private String missatge;
@@ -176,7 +204,6 @@ public class AjaxHelper {
 			return missatge;
 		}
 	}
-
 	public enum AjaxFormEstatEnum {
 		OK,
 		ERROR
